objects/Workstation__c.object
<CustomObject>
    <fields>
        <fullName>Current_OS__c</fullName>
        <label>Current OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN_group__c</fullName>
        <label>LAN group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Registration_ID__c</fullName>
        <label>Last Registration ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_exam_delivery_date__c</fullName>
        <label>Last exam delivery date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prior_OS__c</fullName>
        <label>Prior OS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Workstations</relationshipLabel>
        <relationshipName>Workstations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workstation</label>
    <nameField>
        <label>Workstation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workstations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>